--- a/frontend/src/pages/styles/appointments.css
+++ b/frontend/src/pages/styles/appointments.css
@@ -519,6 +519,7 @@ textarea {
 
     .patient-appt-content-container{
         width: 100%;
+        margin: 10px auto;
     }
 
     .patient-appt-header {
@@ -526,25 +527,24 @@ textarea {
     }
 
     .each-appt-content {
-        min-width: 90%;
+        min-width: 80%;
         flex-direction: column;
         gap: 10px;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
+        align-items: flex-start;
+        justify-content: flex-start;
     }
 
     .cell-1 {
         width: 100%;
-        justify-content: center;
     }
     .cell-2 {
         width: 100%;
-        justify-content: center;
     }
     .cell-3 {
         width: 100%;
-        justify-content: center;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .cell-4 {
